# monkeypatch_plugin

./: README.md
custom_addon/: pyproject.toml  setup.cfg
custom_addon/src/pipeliner_addon/: main.py
pipeliner/: setup.cfg
pipeliner/src/pipeliner/: config.yaml  main.py  readers.py  utils.py
