[metadata]
name = pipeliner_addon
version = 0.0.0a0
author = test
author_email =test@test.com
url = test.com
description = test string

[flake8]
ignore = BLK100,E231,W503
statistics = 1
max-line-length = 88

[tool:pytest]
testpaths = tests
addopts = -vvv --cov-report term-missing

[doc8]
# TODO: Remove current max-line-length ignore in follow-up and adopt black limit.
# max-line-length = 88
ignore = D001